--- a/src/components/dashboard/Sidebar.astro
+++ b/src/components/dashboard/Sidebar.astro
@@ -45,7 +45,7 @@ function isActive(href: string, children?: any[]): boolean {
     <div class="sidebar-header">
       <a href="/dashboard" class="sidebar-logo">
         <Icon name="lucide:layout-dashboard" class="sidebar-logo-icon" />
-        <span class="sidebar-logo-text">Dashboard</span>
+        <span class="sidebar-logo-text">Tablero Inteligente</span>
       </a>
     </div>
 
@@ -126,7 +126,7 @@ function isActive(href: string, children?: any[]): boolean {
       >
         <Icon name="lucide:chevrons-left" class="toggle-icon toggle-icon-collapse" />
         <Icon name="lucide:chevrons-right" class="toggle-icon toggle-icon-expand" />
-        <span class="sidebar-toggle-text">Collapse</span>
+        <span class="sidebar-toggle-text">Contraer</span>
       </button>
     </div>
   </div>
