--- a/src/pages/blog/page/[page].astro
+++ b/src/pages/blog/page/[page].astro
@@ -6,6 +6,8 @@ import { getCollection, type CollectionEntry } from 'astro:content';
 import { siteConfig } from '@/config';
 import { calculateReadingTime } from '@/lib/utils';
 
+export const prerender = true;
+
 const POSTS_PER_PAGE = 6;
 
 export async function getStaticPaths() {
